# FinanceBot-Gen-AI

./: README.md  pyproject.toml  requirements.txt  textloader.ipynb
app/: main.py
